tests/paczka1/fuzzy1/77745962.err
Error in line 3: xrQQl A732 45,5
Error in line 18: xrQQl A732 6,7
Error in line 31: s0sk S761 63,2
Error in line 36: s0sk S681 -2,3
Error in line 24: xrQQl S681 95,4
